@@ -35,6 +35,8 @@ used in Tiff files.
   the user a page named [[:]] already exists.
 * (bug 28960) Added more messages to Special:EmailUser.
 * (bug 23002) Imagelinks table not updated after imagemove.
+* (bug 27864) Transcluding {{Special:Prefix}} with empty prefix now lists all
+  pages.
 
 === API changes in 1.19 ===
 * (bug 27790) add query type for querymodules to action=paraminfo
